<resources>
    <string name="app_name">Stay Safe App</string>
    <string name="title_homescreen">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_name">Name</string>
    <string name="title_number">Number</string>
    <string name="DIAL999">DIAL 999</string>
    <string name="title_econtact1">Emergency Contact 1</string>
    <string name="title_econtact2">Emergency Contact 2</string>
    <string name="Save">Save</string>
    <string name="map_key" translatable="false">AIzaSyAPMFfjrZUjS8JC9_3wwGR58zHryOoDi2A</string>
</resources>