<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:id="@+id/ECName2"
        android:layout_width="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="378dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="307dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="Irwin Jones"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="359dp"
        android:layout_marginEnd="251dp"
        android:layout_marginRight="251dp"
        android:layout_marginBottom="353dp"
        android:text="@string/title_name"
        android:layout_height="20dp"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="80dp"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="455dp"
        android:layout_marginEnd="252dp"
        android:layout_marginRight="252dp"
        android:layout_marginBottom="257dp"
        android:text="@string/title_number"
        android:layout_height="20dp"/>

    <EditText
        android:id="@+id/ECNum2"
        android:layout_width="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="474dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="211dp"
        android:ems="10"
        android:inputType="number"
        android:autofillHints="07772543212"
        tools:ignore="LabelFor"
        android:layout_height="40dp"/>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-2dp" />

    <Button
        android:id="@+id/Dial999"
        android:layout_width="126dp"
        android:layout_height="62dp"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="142dp"
        android:layout_marginTop="574dp"
        android:layout_marginEnd="142dp"
        android:layout_marginRight="142dp"
        android:layout_marginBottom="95dp"
        android:text="@string/DIAL999"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/ECName1"
        android:layout_width="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="553dp"
        android:autofillHints="Irwin Jones "
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="252dp"
        android:layout_marginRight="252dp"
        android:layout_marginBottom="599dp"
        android:text="@string/title_name"
        android:layout_height="20dp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="80dp"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="251dp"
        android:layout_marginRight="251dp"
        android:layout_marginBottom="492dp"
        android:text="@string/title_number"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/ECNum1"
        android:layout_width="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="239dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="447dp"
        android:ems="10"
        android:inputType="number"
        android:autofillHints="07772543212"
        tools:ignore="LabelFor"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/EC1"
        android:layout_width="253dp"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:layout_marginBottom="621dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_econtact1"
        android:textSize="24sp"
        android:layout_height="32dp"/>

    <TextView
        android:id="@+id/EC2"
        android:layout_width="253dp"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="309dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:layout_marginBottom="374dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_econtact2"
        android:textSize="24sp"
        android:layout_height="32dp"/>

    <Button
        android:id="@+id/Savebutton1"
        android:layout_width="73dp"
        android:layout_height="36dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:layout_marginBottom="374dp"
        android:text="@string/Save"
        android:textColor="#FFFFFF"
        android:backgroundTint="#AFAEB1"/>

    <Button
        android:id="@+id/Savebutton2"
        android:layout_width="73dp"
        android:layout_height="36dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:layout_marginBottom="374dp"
        android:text="@string/Save"
        android:textColor="#FFFFFF"
        android:backgroundTint="#AFAEB1"
        />


</FrameLayout>